--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,3 +12,11 @@ jobs:
       - name: Say hello
         run: |
           echo "Hello World!"
+  
+      - name: Report time
+        run: |
+          date
+      
+      - name: File checks
+        run: 
+          ls -l
